--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "next": "11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "styled-jsx": "^3.4.4"
