--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-jsx": "^3.4.4"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1"
   }
